--- a/Galaxy/setupScriptsForGalaxy/cli.rc
+++ b/Galaxy/setupScriptsForGalaxy/cli.rc
@@ -7,7 +7,8 @@ CLIENT_INSTANCE_TYPE=n1-standard-1      # set your VM instance type / size
 USE_PERSISTENT_DISK=0                   # set to 0 for no extra disk, 1 for extra persistent disk
 TEAMTERI_IMAGE=galaxy-image-1           # the Galaxy image you create & store in GCE Images
 BOOT_DISK_SIZE=200GB                    # set to 30 GB or greater for ability to 'dockerize'
+CLIENT_TAG=galaxy-client
+CLIENT_INSTANCES=galaxy-client-2
+PERSISTENT_DISK=galaxy-data-2
 
-
-CLIENT_INSTANCES=`for i in $(seq 2 ${NUM_AS_CLIENTS}); do echo galaxy-client-${i}; done`
 GCLOUD_ARGS="--zone ${ZONE} --project ${PROJECT}"
