renamed:    cli.rc -> 0_cli.rc renamed:    1_GCE-standup.sh -> 1a_gce-standup.sh renamed:    3_GCE-standup-boot-script.sh -> 1b_gce-standup_and_run_boot-script.sh renamed:    2_GCE-cli-cleanup.sh -> 2_gce-cleanup.sh
changed: the reference to cli.rc within these files
changed: formattimg the line that launches the instances

--- a/Galaxy/setupScriptsForGalaxy/0_cli.rc
+++ b/Galaxy/setupScriptsForGalaxy/0_cli.rc
@@ -1,5 +1,5 @@
-ACCOUNT=<email>
-PROJECT=<projectID>
+ACCOUNT=sptkrishnan@gmail.com
+PROJECT=dragons-knights
 
 ID=1
 NUM_AS_CLIENTS=2                        # set the number of GCE VM instances of Galaxy
