--- a/Galaxy/kubernetes/primary-deployment.yaml
+++ b/Galaxy/kubernetes/primary-deployment.yaml
@@ -24,3 +24,16 @@ spec:
           gcePersistentDisk:
             pdName: galaxy-export
             fsType: ext4
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: galaxy-service
+spec:
+  selector:
+    app: galaxy
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
