--- a/Galaxy/Setup_VMs/0_cli.rc
+++ b/Galaxy/Setup_VMs/0_cli.rc
@@ -1,9 +1,9 @@
-ACCOUNT=<account_email>
-PROJECT=<project_id>
+ACCOUNT=<account_email>                 # set your GCP email
+PROJECT=<project_id>                    # set your GCP project ID
 
 ID=1
 NUM_AS_CLIENTS=2                        # set the number of GCE VM instances of Galaxy
-ZONE=us-west1-a                      # set your zone, i.e 'us-central1-b', etc....
+ZONE=us-west1-a                         # set your zone, i.e 'us-central1-b', etc....
 CLIENT_INSTANCE_TYPE=n1-standard-1      # set your VM instance type / size
 USE_PERSISTENT_DISK=0                   # set to 0 for no extra disk, 1 for extra persistent disk
 TEAMTERI_IMAGE=galaxy-image-1           # the Galaxy image you create & store in GCE Images
